2007-10-17  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/project.py:
	redefined prototype for save-uri-requested signal -- uri, format
	made changes to application logic, which was buggy
	now passed into method call setUri()
	* pitivi/projectsaver.py:
	added some more classmethods for working with projectSaver derivatives
	* pitivi/ui/mainwindow.py:
	implemented file type filters in in open and save dialogs.

	Note: this code breaks some test cases relating to the applicaiton
	logic, but appears to work properly. Want to get changes to
	server, will debug the application logic in next commit.

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	Back to development cycle.

=== release 0.11.0 ===

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.11.0 "A hooligan's game played by gentlemen"

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* AUTHORS:
	* pitivi/ui/mainwindow.py:
	Add Thijs Vermeir to the list of contributors

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/bin.py:
	Add 'recording' property to SmartBin, set to True when it is in
	recording mode.
	* pitivi/playground.py:
	Query on the vsinkthread ONLY if the current smartbin is not in
	recording mode, else query on the whole SmartBin.
	This fixes the progress bar not working when encoding.

2007-10-14  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/bin.py:
	* pitivi/elements/singledecodebin.py:
	* pitivi/playground.py:
	Replace use of '%s' by '%r' for gst.Object subclasses in order to
	avoid deadlocks for people who don't have cvs gst-python.

2007-10-04  Brandon Lewis  <brandon_lewis@berkeley.edu>

	reviewed by: <delete if not using a buddy>

	* pitivi/ui/sourcefactories.py:
	added handler for new-project-failed signal (simply disconnects
	project signals, and clears liststore.

	this should be all the changes required for the simple UI to